# surgical_robot

./: .gitignore  README.md  organize_files.sh  setup_local_sync.sh  start_wsl_desktop.sh  sync.sh  启动WSL桌面.bat  文件结构说明.md
config/: markdown-preview.css
docs/: 文件组织说明.md  项目进度跟踪.md
docs/ai-team/: AI组-医学影像分割技术方案.md  AI组-第一周任务清单.md
docs/control-team/: README.md
docs/control-team/plans/: 控制组-第一周任务清单.md  控制组-第二周任务清单.md
docs/control-team/quick-reference/: Day2-快速参考.md
docs/control-team/reports/: README.md
docs/control-team/reports/week1/: 周末任务1-启动文件创建完成报告.md  第一周总结报告.md
docs/control-team/reports/week1/day2/: Day2上午任务完成报告.md  Day2下午任务完成报告.md
docs/control-team/reports/week1/day3/: Day3上午任务完成报告.md  Day3下午任务完成报告.md
docs/control-team/reports/week1/day4/: Day4上午任务完成报告.md  Day4下午任务完成报告.md
docs/control-team/reports/week1/day5/: Day5上午任务完成报告.md  Day5下午任务完成报告.md
docs/control-team/reports/week2/: 第二周总结报告.md
docs/control-team/reports/week2/day1/: day1上午任务完成报告.md
docs/control-team/technical-specs/: 控制组-ROS2与CAN集成技术方案.md
docs/overview/: 手术机器人自动导航项目技术大纲.md
docs/progress/: 控制组-第一天进度报告.md
docs/protocols/: AI导航协议需求总结.md  README.md  robot协议.xlsx  robot协议_AI导航专用.csv  robot协议_完整版.csv  robot协议_完整版.md
scripts/: check_day1_can_setup.sh
surgical_robot_ws/: check_env.sh
surgical_robot_ws/log/: latest_build
surgical_robot_ws/src/surgical_robot_control/: CMakeLists.txt  can_protocol.h  package.xml
surgical_robot_ws/src/surgical_robot_control/config/: custom_robot_protocol_config.yaml
surgical_robot_ws/src/surgical_robot_control/include/surgical_robot_control/: custom_robot_protocol.h
surgical_robot_ws/src/surgical_robot_control/launch/: can_test.launch.py  test_trajectory.launch.py
surgical_robot_ws/src/surgical_robot_control/msg/: RobotState.msg  TrajectoryPoint.msg
surgical_robot_ws/src/surgical_robot_control/src/: can_bridge_node.cpp  can_message_test.cpp  can_test.cpp  hello_control.cpp  trajectory_player.cpp  updated_protocol_factory.cpp
surgical_robot_ws/test_trajectories/: README.md  test_combined.csv  test_linear.csv  test_rotation.csv  validate_trajectories.py
